--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-ktor_version=1.6.4
-kotlin_version=1.5.31
-logback_version=1.2.3
 kotlin.code.style=official
+kotlinVersion=1.5.31
+ktorVersion=1.6.4
+logbackVersion=1.2.6
+exposedVersion=0.35.1
+h2Version=1.4.200
